javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/SuperClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class SuperClass {

  public int d = 1;
}
